--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <fast.json.version>1.2.47</fast.json.version>
         <poi.version>3.15</poi.version>
         <junit.version>4.12</junit.version>
+        <druid.version>1.1.13</druid.version>
     </properties>
     <modules>
         <module>cloud-server</module>
@@ -37,6 +38,11 @@
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
