1.单独抽取一个quartz应用进行部署

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <module>dubbo-api</module>
         <module>dubbo-customer</module>
         <module>dubbo-provider</module>
+        <module>quartz</module>
     </modules>
 
     <dependencyManagement>
