--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <poi.version>3.15</poi.version>
         <junit.version>4.12</junit.version>
         <druid.version>1.1.13</druid.version>
+        <mybatis.version>2.0.0</mybatis.version>
+        <pagehelper.version>1.2.8</pagehelper.version>
     </properties>
     <modules>
         <module>cloud-server</module>
@@ -70,6 +72,16 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>${pagehelper.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
