--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <mybatis.version>2.0.0</mybatis.version>
         <pagehelper.version>1.2.8</pagehelper.version>
         <netty-all.version>4.1.6.Final</netty-all.version>
+        <commons-lang3.version>3.8.1</commons-lang3.version>
     </properties>
     <modules>
         <module>cloud-server</module>
@@ -89,6 +90,11 @@
                 <groupId>io.netty</groupId>
                 <artifactId>netty-all</artifactId>
                 <version>${netty-all.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons-lang3.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
